<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp">

    <TextView
        android:id="@+id/player_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/player_name"
        android:textSize="13sp"
        android:layout_marginStart="15dp"
        android:maxLines="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/player_last_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/player_surname"
        android:textSize="13sp"
        android:maxLines="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/player_team"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/player_first_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player_team"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/player_team"
        android:textSize="13sp"
        android:maxLines="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/player_height_ft"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/player_last_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player_height_ft"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/player_height_ft"
        android:textSize="13sp"
        android:maxLines="2"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/player_height_in"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/player_team"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player_height_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/player_height_in"
        android:textSize="13sp"
        android:maxLines="2"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/player_position"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/player_height_ft"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player_position"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/player_position"
        android:textSize="13sp"
        android:maxLines="2"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/player_weight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/player_height_in"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/player_weight"
        android:textSize="13sp"
        android:maxLines="2"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/player_position"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>