<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp">

    <TextView
        android:id="@+id/team_home_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/home_name"
        android:textSize="13sp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/team_home_score"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team_home_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/home_score"
        android:textSize="13sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/away_home_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/team_home_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/away_home_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/away_name"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/away_home_score"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/team_home_score"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/away_home_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/away_score"
        android:textSize="13sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/away_home_name"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>