<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:padding="10dp">

    <TextView
        android:id="@+id/player_header_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/player_header_name"
        android:textSize="13sp"
        android:textStyle="bold"
        android:maxLines="2"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/player_header_surname"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player_header_surname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/player_header_surname"
        android:textSize="13sp"
        android:textStyle="bold"
        android:maxLines="2"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/player_header_team"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/player_header_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player_header_team"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/player_header_team"
        android:textSize="13sp"
        android:textStyle="bold"
        android:maxLines="2"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/player_header_height_ft"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/player_header_surname"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player_header_height_ft"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/player_header_height_ft"
        android:textSize="13sp"
        android:textStyle="bold"
        android:maxLines="2"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/player_header_height_in"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/player_header_team"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player_header_height_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/player_header_height_in"
        android:textSize="13sp"
        android:textStyle="bold"
        android:maxLines="2"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/player_header_position"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/player_header_height_ft"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player_header_position"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/player_header_position"
        android:textSize="13sp"
        android:textStyle="bold"
        android:maxLines="2"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/player_header_weight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/player_header_height_in"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player_header_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/player_header_weight"
        android:textSize="13sp"
        android:textStyle="bold"
        android:maxLines="2"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/player_header_position"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>