<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:padding="10dp">

    <TextView
        android:id="@+id/homeNameHeader"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/home_name_header"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:maxLines="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/homeScoreHeader"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/homeScoreHeader"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/home_score"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:maxLines="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/awayNameHeader"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/homeNameHeader"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/awayNameHeader"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/away_name_header"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:maxLines="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/awayScoreHeader"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/homeScoreHeader"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/awayScoreHeader"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/away_score"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:maxLines="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/awayNameHeader"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>